syntax = "proto3";

package notifications.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/notifications/v1;notificationsv1";

// NotificationService manages user notification inbox lifecycle.
service NotificationService {
  // CreateNotificationIntent appends one user-targeted notification intent.
  rpc CreateNotificationIntent(CreateNotificationIntentRequest) returns (CreateNotificationIntentResponse);
  // ListNotifications returns notifications visible to the caller.
  rpc ListNotifications(ListNotificationsRequest) returns (ListNotificationsResponse);
  // GetUnreadNotificationStatus returns unread-inbox status for the caller.
  rpc GetUnreadNotificationStatus(GetUnreadNotificationStatusRequest) returns (GetUnreadNotificationStatusResponse);
  // MarkNotificationRead acknowledges one notification for the caller.
  rpc MarkNotificationRead(MarkNotificationReadRequest) returns (MarkNotificationReadResponse);
}

// Notification stores one user notification inbox item.
message Notification {
  string id = 1;
  string recipient_user_id = 2;
  string topic = 3;
  string payload_json = 4;
  string dedupe_key = 5;
  string source = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp read_at = 9;
}

message CreateNotificationIntentRequest {
  string recipient_user_id = 1;
  string topic = 2;
  string payload_json = 3;
  string dedupe_key = 4;
  string source = 5;
}

message CreateNotificationIntentResponse {
  Notification notification = 1;
}

message ListNotificationsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListNotificationsResponse {
  repeated Notification notifications = 1;
  string next_page_token = 2;
}

message GetUnreadNotificationStatusRequest {}

message GetUnreadNotificationStatusResponse {
  bool has_unread = 1;
  int32 unread_count = 2;
}

message MarkNotificationReadRequest {
  string notification_id = 1;
}

message MarkNotificationReadResponse {
  Notification notification = 1;
}
